--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,8 @@ dependencies {
     implementation("androidx.navigation:navigation-ui-ktx:$navVersion")
 
 
+    def lifecycle_version = "2.0.0"
+     // alternatively - just LiveData
+    //noinspection GradleDependency
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 }
